# machina

./: .clang-format  CMakeLists.txt  README.md
include/machina/: Machina.hpp
tests/: test_machina.cpp
